# dawn-rs

./: .gitmodules  Cargo.toml
dawn-rs/: Cargo.toml
dawn-rs/examples/: adapters.rs  triangle.rs  window.rs
dawn-rs/src/: convert.rs  indirect.rs  lib.rs  native_swap_chain.rs  util.rs
dawn-sys/: Cargo.toml  build.rs
dawn-sys/dawnc/: dawnc.cpp  dawnc.h
dawn-sys/src/: dawn_proc_table.rs  dawn_wsi.rs  lib.rs  webgpu.rs
