[package]
name = "dawn-sys"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
links = "dawn"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
#fs-utils = "1.1"

# Generate new bindings instead of the baked in copy.
bindgen = { version = "0.53", optional = true }


